Bug 62085 - BalancerMember worker hostname (65.character.host.name) too long
Summary: BalancerMember worker hostname (65.character.host.name) too long
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_proxy (show other bugs)
Version: 2.5-HEAD
Hardware: PC Mac OS X 10.1
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-07 15:43 UTC by Graham Leggett
Modified: 2018-02-19 11:20 UTC (History)
0 users



Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graham Leggett 2018-02-07 15:43:13 UTC
If the BalancerMember directive contains a URL with a hostname longer than X characters, we fail as follows:

BalancerMember worker hostname (65.character.host.name) too long

The same fix for https://bz.apache.org/bugzilla/show_bug.cgi?id=53218 on the worker name needs to be applied to the hostname, and separately the size of the hostname needs to be raised so it is RFC1035 compliant in trunk.
Comment 1 Graham Leggett 2018-02-14 00:43:25 UTC
http://svn.apache.org/r1824176
Comment 2 Graham Leggett 2018-02-19 11:20:28 UTC
Backported to v2.4.30:

http://svn.apache.org/r1824455
http://svn.apache.org/r1824504

(Both patches required, first is extended by second).