mod_proxy: Provide an RFC1035 compliant version of the hostname in the proxy_worker_shared structure. PR62085

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1824176 13f79535-47bb-0310-9956-ffa450edef68